SuperPoint C++ inference implementation

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -10,12 +10,18 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
+add_compile_options(-Wall -Wextra -Werror)
+
 set(SOURCE_FILES
     src/main.cc
     src/camera.h
     src/camera.cc
     src/torchutis.h
     src/torchutis.cc
+    src/settings.h
+    src/settings.cc
+    src/superpoint.h
+    src/superpoint.cc
 )
 
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
