--- a/python/tests/test.ini
+++ b/python/tests/test.ini
@@ -1,3 +1,4 @@
 [DEFAULT]
-weights_path=/home/kirill/development/magicpoint_data/checkpoints/magic_point_0.pt
-image_path=/home/kirill/development/magicpoint_data/images/training/15.png
+weights_path=/run/media/kirill/data/development/magicpoint_data/checkpoints/magic_point_1.pt
+image_path=/run/media/kirill/data/data_sets/coco/test2014/COCO_test2014_000000000001.jpg
+
