--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,10 +1,11 @@
-torch~=1.8.1
-opencv-python~=4.5.2.52
-torchvision~=0.9.1
-numpy~=1.19.0
-tqdm~=4.61.0
-scipy~=1.7.0
-kornia~=0.5.5
-torchsummary~=1.5.1
-torchmetrics~=0.3.2
-albumentations~=1.0.3
+albumentations==1.0.3
+scipy==1.7.1
+torchvision~=0.10.0
+torchmetrics~=0.5.1
+torch~=1.9.0
+torchsummary==1.5.1
+tqdm~=4.62.2
+numpy~=1.21.2
+kornia~=0.5.10
+
+opencv-python~=4.5.3.56
